name:                ransac-ng
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/fhaust/ransac-ng#readme
license:             BSD3
license-file:        LICENSE
author:              Florian Hofmann
maintainer:          fho@f12n.de
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , LineFitting
                     , MSAC
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , MonadRandom
                     , linear
  default-language:    Haskell2010

executable ransac-ng-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ransac-ng
                     , linear
                     , MonadRandom
                     , vector
  default-language:    Haskell2010

test-suite ransac-ng-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ransac-ng
                     , RANSAC
                     , vector
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck
                     , linear
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark ransac-ng-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , ransac-ng
                     , criterion
                     , vector
                     , deepseq
                     , linear
                     , MonadRandom
                     , RANSAC
  ghc-options:         -threaded -rtsopts -O2 -j
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fhaust/ransac-ng
